# phoenix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  pages.yml  release.yml
crates/phoenix-cli/: Cargo.toml
crates/phoenix-cli/src/: main.rs
crates/phoenix-core/: Cargo.toml
crates/phoenix-core/data/: questions.json
crates/phoenix-core/src/: config.rs  lib.rs  logging.rs  telemetry.rs
crates/phoenix-core/src/crypto/: address.rs  derive.rs  hashcat.rs  mnemonic.rs  mod.rs  reconstruct.rs  solana.rs
crates/phoenix-core/src/forensic/: bip39_text.rs  bitwarden_csv.rs  chrome_history.rs  mbox.rs  mod.rs  registry.rs
crates/phoenix-core/src/interview/: candidate.rs  debate.rs  interviewer.rs  mod.rs  questions.rs  session.rs  state.rs
crates/phoenix-core/src/llm/: mod.rs  ollama.rs
crates/phoenix-core/tests/: config_test.rs  crypto_test.rs  extended_test.rs  forensic_test.rs  interview_test.rs  logging_test.rs  ollama_offline_test.rs  smoke_test.rs  solana_test.rs  stress_test.rs  telemetry_test.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  ROADMAP.md  payments.md  threat-model-v0.md  threat-model-v1.md  wallets.md
docs/superpowers/plans/: 2026-05-08-phoenix-week1-foundation.md  2026-05-09-phoenix-week2-cognitive-interview.md  2026-05-09-phoenix-week3-forensic-a.md  2026-05-09-phoenix-week4-6-extended.md  2026-05-09-phoenix-week5-crypto-reconstruct.md
docs/superpowers/specs/: 2026-05-08-phoenix-design.md
examples/: 01_eth_one_missing_word.sh  02_btc_one_missing_word.sh  03_solana_one_missing_word.sh  04_show_solana_addresses.sh  05_two_missing_words.sh  06_create_a_fresh_wallet.sh  07_doctor_and_health_check.sh  README.md
site/: index.html  status.html
site/launch/: README.md  deploy-cloudflare.md  hn-show-post.md  push-to-github.md  reddit-posts.md  twitter-thread.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  main.rs
src-ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-ui/src/: App.js  App.tsx
src-ui/src/lib/: interview.test.ts  interview.ts  ipc.js  ipc.test.js  ipc.test.ts  ipc.ts
src-ui/src/routes/: Candidates.tsx  Import.tsx  Interview.tsx  Reconstruct.tsx  Settings.js  Settings.tsx  Welcome.js  Welcome.tsx
