[workspace]
resolver = "2"
members = ["crates/phoenix-core", "crates/phoenix-cli"]
# src-tauri is intentionally a separate workspace; Tauri's build deps interact
# poorly with library-only `cargo test --workspace` runs in CI.

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phoenix Maintainer <noreply@phoenix.local>"]
license = "MIT"
repository = "https://github.com/enesakb/phoenix"
rust-version = "1.83"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
