[package]
name = "phoenix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "phoenix"
path = "src/main.rs"

[dependencies]
phoenix-core = { path = "../phoenix-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
tokio.workspace = true
