[package]
name = "phoenix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
