[package]
name = "phoenix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
rusqlite = { version = "0.39", features = ["bundled"] }
csv = "1.3"
url = "2.5"
bip39 = "2.1"
bip32 = "0.5"
secp256k1 = { version = "0.30", features = ["recovery"] }
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
rayon = "1.10"
ed25519-dalek = "2.1"
slip10_ed25519 = "0.1"
bs58 = "0.5"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
